@@ -1,3 +1,4 @@
+Fixed: Cursor remains as East-West cursor when in the play area
 # 0.00.14 (55300) Aug 16, 2011
 # 0.00.13 (55221) Aug 15, 2011
 # 0.00.12 (55201) Aug 14, 2011
